[package]
name = "rtt-demo"
version = "0.1.7"
description = "Rapidly-Exploring random trees path planning algorithm demo."
license = "MIT"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[dependencies]
rtt = "0.4"
log = "0.4"
clap = "2.31"
rand = "0.4"
env_logger = "0.5"
gfx_core = "0.8"
piston_window = "0.79"
